--- a/src/html/and.html
+++ b/src/html/and.html
@@ -14,128 +14,131 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 10px;">AND</h1>
-        <h2 style="text-align:center; ">Bitwise AND with Accumulator</h2>
-        <h2 style="text-align:center; ">Operation: A & M => A</h2>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>AND</h1>
+        <h2>Bitwise AND with Accumulator</h2>
+        <h2>Operation: A & M => A</h2>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Immediate</td>
-          <td>AND #$44</td>
-          <td>$29</td>
-          <td>2</td>
-          <td>2</td>
-        </tr>
-        <tr>
-          <td>Zero Page</td>
-          <td>AND $44</td>
-          <td>$25</td>
-          <td>2</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>Zero Page,X</td>
-          <td>AND $44,X</td>
-          <td>$35</td>
-          <td>2</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <td>Absolute</td>
-          <td>AND $4400</td>
-          <td>$2D</td>
-          <td>3</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <td>Absolute,X</td>
-          <td>AND $4400,X</td>
-          <td>$3D</td>
-          <td>3</td>
-          <td>4+</td>
-        </tr>
-        <tr>
-          <td>Absolute,Y</td>
-          <td>AND $4400,Y</td>
-          <td>$39</td>
-          <td>3</td>
-          <td>4+</td>
-        </tr>
-        <tr>
-          <td>(Indirect,X)</td>
-          <td>AND ($44,X)</td>
-          <td>$21</td>
-          <td>2</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>(Indirect),Y</td>
-          <td>AND ($44),Y</td>
-          <td>$31</td>
-          <td>2</td>
-          <td>5+</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Immediate</td>
+            <td>AND #$44</td>
+            <td>$29</td>
+            <td>2</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>Zero Page</td>
+            <td>AND $44</td>
+            <td>$25</td>
+            <td>2</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>Zero Page,X</td>
+            <td>AND $44,X</td>
+            <td>$35</td>
+            <td>2</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Absolute</td>
+            <td>AND $4400</td>
+            <td>$2D</td>
+            <td>3</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Absolute,X</td>
+            <td>AND $4400,X</td>
+            <td>$3D</td>
+            <td>3</td>
+            <td>4+</td>
+          </tr>
+          <tr>
+            <td>Absolute,Y</td>
+            <td>AND $4400,Y</td>
+            <td>$39</td>
+            <td>3</td>
+            <td>4+</td>
+          </tr>
+          <tr>
+            <td>(Indirect,X)</td>
+            <td>AND ($44,X)</td>
+            <td>$21</td>
+            <td>2</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>(Indirect),Y</td>
+            <td>AND ($44),Y</td>
+            <td>$31</td>
+            <td>2</td>
+            <td>5+</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p style="text-align:center;">+ add 1 cycle if page boundary crossed.<br>The negative flag is set if the result is negative, i.e. has its most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.</p>
+      <div class="opcode-flags">
+        <p>+ add 1 cycle if page boundary crossed.<br>The negative flag is set if the result is negative, i.e. has its most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.</p>
+      </div>
 
-      <p>Performs a logical AND between the bits of the accumulator and that of the operand specified (next byte of the opcode in immediate addressing). The result of AND operations will be 1 only when both bits compared are 1, else will be always 0.</p>
+      <div class="opcode-text">
+        <p>Performs a logical AND between the bits of the accumulator and that of the operand specified (next byte of the opcode in immediate addressing). The result of AND operations will be 1 only when both bits compared are 1, else will be always 0.</p>
 
-      <p>A common usage for this instruction is to deactivate (reset) a particular bit or set of bits within a bit mask, i.e. puting zeros in the bit places we want to reset (bit = 0) and ones in the places we want to be unaltered. To activate bits we will
-        use ora with a the contrary bit patter for the mask: one in the bits we need to activate and zeros in the bits we need to be unaltered.</p>
+        <p>A common usage for this instruction is to deactivate (reset) a particular bit or set of bits within a bit mask, i.e. puting zeros in the bit places we want to reset (bit = 0) and ones in the places we want to be unaltered. To activate bits we
+          will use ora with a the contrary bit patter for the mask: one in the bits we need to activate and zeros in the bits we need to be unaltered.</p>
 
-      <p>Example, if we want to deactivate bit 5 (and only this bit) in the variable "value":</p>
+        <p>Example, if we want to deactivate bit 5 (and only this bit) in the variable "value":</p>
+      </div>
 
       <div class="codeblock">
         <pre style="margin: 0;">
@@ -144,12 +147,13 @@
     <span style="color: #eeeb42; font-weight: bold">sta</span><span style="color: white;"> value </span><span style="color: #83f383;">       // Updates value (with bit 5 off)</span>
           </pre>
       </div>
-      <br>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Bitwise Instructions" class="button buttonNAVIGATION" onclick="cmdBITWISE()">Bitwise Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Bitwise Instructions" class="button buttonNAVIGATION" onclick="cmdBITWISE()">Bitwise Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
