--- a/src/html/asl.html
+++ b/src/html/asl.html
@@ -14,113 +14,118 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">ASL</h1>
-        <h2 style="text-align:center; ">Arithmetic Shift Left</h2>
-        <h2 style="text-align:center; ">Operation: C &lt;= <span style="background-color: #867BE4;">7 6 5 4 3 2 1 0</span> &lt;= 0</h2>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>ASL</h1>
+        <h2>Arithmetic Shift Left</h2>
+        <h2>Operation: C &lt;= <span style="background-color: #867BE4;">7 6 5 4 3 2 1 0</span> &lt;= 0</h2>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Accumulator</td>
-          <td>ASL</td>
-          <td>$0A</td>
-          <td>1</td>
-          <td>2</td>
-        </tr>
-        <tr>
-          <td>Zero Page</td>
-          <td>ASL $44</td>
-          <td>$06</td>
-          <td>2</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <td>Zero Page,X</td>
-          <td>ASL $44,X</td>
-          <td>$16</td>
-          <td>2</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>Absolute</td>
-          <td>ASL $4400</td>
-          <td>$0E</td>
-          <td>3</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>Absolute,X</td>
-          <td>ASL $4400,X</td>
-          <td>$1E</td>
-          <td>3</td>
-          <td>7</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&#10003;</td>
-                <td>&#10003;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Accumulator</td>
+            <td>ASL</td>
+            <td>$0A</td>
+            <td>1</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>Zero Page</td>
+            <td>ASL $44</td>
+            <td>$06</td>
+            <td>2</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <td>Zero Page,X</td>
+            <td>ASL $44,X</td>
+            <td>$16</td>
+            <td>2</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>Absolute</td>
+            <td>ASL $4400</td>
+            <td>$0E</td>
+            <td>3</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>Absolute,X</td>
+            <td>ASL $4400,X</td>
+            <td>$1E</td>
+            <td>3</td>
+            <td>7</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
+                  <td>&#10003;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p style="text-align:center;">The negative status flag is set if the result is negative, i.e. has its most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.<br>The carry flag is set or cleared depending on the result.</p>
+      <div class="opcode-flags">
+        <p>The negative status flag is set if the result is negative, i.e. has its most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.<br>The carry flag is set or cleared depending on the result.</p>
+      </div>
 
-      <p>Shifts the bits of the accumulator or a memory address specified by the operand, one position to the left. Bit 7 goes to the Carry flag (C). Zero is shifted into bit zero.</p>
+      <div class="opcode-text">
+        <p>Shifts the bits of the accumulator or a memory address specified by the operand, one position to the left. Bit 7 goes to the Carry flag (C). Zero is shifted into bit zero.</p>
 
-      <p>It's the inverse operation of the instruction lsr.</p>
+        <p>It's the inverse operation of the instruction lsr.</p>
 
-      <p>Performing an asl is equivalent to performing a multiplication by 2.</p>
+        <p>Performing an asl is equivalent to performing a multiplication by 2.</p>
 
-      <p>It is worth noting that the 6502 (and 6510) does not have any instruction to perform multiplications.</p>
+        <p>It is worth noting that the 6502 (and 6510) does not have any instruction to perform multiplications.</p>
+      </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Bitwise Instructions" class="button buttonNAVIGATION" onclick="cmdBITWISE()">Bitwise Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Bitwise Instructions" class="button buttonNAVIGATION" onclick="cmdBITWISE()">Bitwise Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
