--- a/src/html/brk.html
+++ b/src/html/brk.html
@@ -14,86 +14,91 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">BRK</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>BRK</h1>
         <h2 style="text-align:center;">Forced Break</h2>
         <h4 style="text-align:center;">Operation: Forces software interrupt</h4>
         <h4 style="text-align:center;">transfer to stack PC+2 and P</h4>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Implied</td>
-          <td>BRK</td>
-          <td>$00</td>
-          <td>1</td>
-          <td>7</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Implied</td>
+            <td>BRK</td>
+            <td>$00</td>
+            <td>1</td>
+            <td>7</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p style="text-align:center;">The break status flag is set.<br>The interrupt status flag is set.</p>
+      <div class="opcode-flags">
+        <p>The break status flag is set.<br>The interrupt status flag is set.</p>
+      </div>
 
-      <p>This instruction forces a software interrupt. System takes control and executes the interrput service routine that returns control to Basic. However, user can change the jump to this routine. This interrupt puts the break flag (B) = 1 to indicate
-        that a software interrupt was forced. It also activates the interrupt flag, saves the Program Counter (PC+2) and P register into the stack (in this precise order). The jump to the interrupt service routine is made through an indirect jump to the
-        vector in $FFFE/$FFFF (NMI vector).</p>
+      <div class="opcode-text">
+        <p>This instruction forces a software interrupt. System takes control and executes the interrput service routine that returns control to Basic. However, user can change the jump to this routine. This interrupt puts the break flag (B) = 1 to indicate
+          that a software interrupt was forced. It also activates the interrupt flag, saves the Program Counter (PC+2) and P register into the stack (in this precise order). The jump to the interrupt service routine is made through an indirect jump to
+          the vector in $FFFE/$FFFF (NMI vector).</p>
 
-      <p>It is a useful instruction to make breakpoints in our programs to facilitate the debugging process.</p>
+        <p>It is a useful instruction to make breakpoints in our programs to facilitate the debugging process.</p>
 
-      <p>Note: a brk instruction cannot be masked touching the I flag.</p>
+        <p>Note: a BRK instruction cannot be masked touching the I flag.</p>
+      </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Other Instructions" class="button buttonNAVIGATION" onclick="cmdOTHER()">View Other Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Other Instructions" class="button buttonNAVIGATION" onclick="cmdOTHER()">View Other Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
