--- a/src/html/bvc.html
+++ b/src/html/bvc.html
@@ -14,85 +14,88 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">BVC</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>BVC</h1>
         <h2 style="text-align:center;">Branch on oVerflow Clear</h2>
         <h2 style="text-align:center;">Operation: Jump if V = 0</h2>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Relative</td>
-          <td>BVC $nn</td>
-          <td>$50</td>
-          <td>2</td>
-          <td>2+</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Relative</td>
+            <td>BVC $nn</td>
+            <td>$50</td>
+            <td>2</td>
+            <td>2+</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p style="text-align:center;">+ A branch not taken requires 2 machine cycles.<br>+ A branch requires 3 cycles if taken, plus 1 cycle if the branch cross a page boundary.</p>
+      <div class="opcode-flags">
+        <p>+ A branch not taken requires 2 machine cycles.<br>+ A branch requires 3 cycles if taken, plus 1 cycle if the branch cross a page boundary.</p>
+      </div>
 
-      <p>If Overflow flag = 0, jump the number of bytes expressed by the opcode's next byte. This byte will be interpreted as a signed byte (in Two's complement), allowing to jump forward (127 bytes) or backwards (128 bytes). The assembler will automatically
-        calculate this displacement when we indicate a label as the destination for the jump, but we would need to understand Two's complement numbers in order to assemble relative branchs manually.</p>
+      <div class="opcode-text">
+        <p>If Overflow flag = 0, jump the number of bytes expressed by the opcode's next byte. This byte will be interpreted as a signed byte (in Two's complement), allowing to jump forward (127 bytes) or backwards (128 bytes). The assembler will automatically
+          calculate this displacement when we indicate a label as the destination for the jump, but we would need to understand Two's complement numbers in order to assemble relative branchs manually.</p>
 
-      <p>For jumps greater than the range of one signed byte we must use the JMP instruction. Considering that all the conditional branch instructions are using Relative Addressing and JMP uses Absolute Addressing, if we need to jump to a far place conditionally
-        we can play with conditional branching points pointing to absolute jumps.</p>
+        <p>For jumps greater than the range of one signed byte we must use the JMP instruction. Considering that all the conditional branch instructions are using Relative Addressing and JMP uses Absolute Addressing, if we need to jump to a far place conditionally
+          we can play with conditional branching points pointing to absolute jumps.</p>
 
-      <p>Also we can use bvc to force a relative jump, instead of an absolute (primarily to make relocatable routines). For this, we need first to reset the overflow flag (V = 0) with the clv instruction so testing for this flag always is true and the branch
-        is taken.</p>
+        <p>Also we can use bvc to force a relative jump, instead of an absolute (primarily to make relocatable routines). For this, we need first to reset the overflow flag (V = 0) with the clv instruction so testing for this flag always is true and the
+          branch is taken.</p>
 
-      <p>Be aware, however, that there is no instruction to modify the overflow flag = 1.</p>
+        <p>Be aware, however, that there is no instruction to modify the overflow flag = 1.</p>
 
-      <p>Example: Relocatable conditional branching using bvc.</p>
+        <p>Example: Relocatable conditional branching using bvc.</p>
+      </div>
 
       <div class="codeblock">
         <pre style="margin: 0;">
@@ -105,14 +108,18 @@
         </pre>
       </div>
 
-      <p>Note: There is no BRA (Branch Always) instruction but it can be easily emulated by branching on the basis of a known condition. One of the best flags to use for this purpose is the Overflow flag which is unchanged by all but the addition and subtraction
-        operations.
-      </p>
+      <div class="opcode-text">
+        <p>Note: There is no BRA (Branch Always) instruction but it can be easily emulated by branching on the basis of a known condition. One of the best flags to use for this purpose is the Overflow flag which is unchanged by all but the addition and subtraction
+          operations.
+        </p>
+      </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Branch Instructions" class="button buttonNAVIGATION" onclick="cmdBRANCH()">Branch Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Branch Instructions" class="button buttonNAVIGATION" onclick="cmdBRANCH()">Branch Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
