--- a/src/html/cmp.html
+++ b/src/html/cmp.html
@@ -14,129 +14,132 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">CMP</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>CMP</h1>
         <h2 style="text-align:center;">CoMPare Memory with accumulator</h2>
         <h2 style="text-align:center;">Operation: Compare A and M</h2>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Immediate</td>
-          <td>CMP #$44</td>
-          <td>$C9</td>
-          <td>2</td>
-          <td>2</td>
-        </tr>
-        <tr>
-          <td>Zero Page</td>
-          <td>CMP $44</td>
-          <td>$C5</td>
-          <td>2</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>Zero Page,X</td>
-          <td>CMP $44,X</td>
-          <td>$D5</td>
-          <td>2</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <td>Absolute</td>
-          <td>CMP $4400</td>
-          <td>$CD</td>
-          <td>3</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <td>Absolute,X</td>
-          <td>CMP $4400,X</td>
-          <td>$DD</td>
-          <td>3</td>
-          <td>4+</td>
-        </tr>
-        <tr>
-          <td>Absolute,Y</td>
-          <td>CMP $4400,Y</td>
-          <td>$D9</td>
-          <td>3</td>
-          <td>4+</td>
-        </tr>
-        <tr>
-          <td>(Indirect,X)</td>
-          <td>CMP ($44,X)</td>
-          <td>$C1</td>
-          <td>2</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>(Indirect),Y</td>
-          <td>CMP ($44),Y</td>
-          <td>$D1</td>
-          <td>2</td>
-          <td>5+</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&#10003;</td>
-                <td>&#10003;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Immediate</td>
+            <td>CMP #$44</td>
+            <td>$C9</td>
+            <td>2</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>Zero Page</td>
+            <td>CMP $44</td>
+            <td>$C5</td>
+            <td>2</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>Zero Page,X</td>
+            <td>CMP $44,X</td>
+            <td>$D5</td>
+            <td>2</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Absolute</td>
+            <td>CMP $4400</td>
+            <td>$CD</td>
+            <td>3</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Absolute,X</td>
+            <td>CMP $4400,X</td>
+            <td>$DD</td>
+            <td>3</td>
+            <td>4+</td>
+          </tr>
+          <tr>
+            <td>Absolute,Y</td>
+            <td>CMP $4400,Y</td>
+            <td>$D9</td>
+            <td>3</td>
+            <td>4+</td>
+          </tr>
+          <tr>
+            <td>(Indirect,X)</td>
+            <td>CMP ($44,X)</td>
+            <td>$C1</td>
+            <td>2</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>(Indirect),Y</td>
+            <td>CMP ($44),Y</td>
+            <td>$D1</td>
+            <td>2</td>
+            <td>5+</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
+                  <td>&#10003;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p style="text-align:center;">+ add 1 cycle if page boundary crossed.
-        <br>The negative status flag is set if the result is negative, i.e. has it's most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.<br>The carry flag is set or cleared depending on the result.</p>
+      <div class="opcode-flags">
+        <p>+ add 1 cycle if page boundary crossed.<br>The negative status flag is set if the result is negative, i.e. has it's most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.<br>The carry flag is set
+          or cleared depending on the result.</p>
+      </div>
 
-      <p>Compares a memory address (next byte to instruction, in immediate addressing) with the contents of the accumulator. Flags are modified depending on the result.</p>
+      <div class="opcode-text">
+        <p>Compares a memory address (next byte to instruction, in immediate addressing) with the contents of the accumulator. Flags are modified depending on the result.</p>
 
-      <p>Internally the comparison consists in the substraction of the contents of the accumulator minus the operand (A-M), ignoring the result (accumulator and memory remain untouched) but modifying the affected flags. Then we can use conditional branch
-        instructions that check the pertinent flag to branch to different sections in our program accordingly.</p>
+        <p>Internally the comparison consists in the substraction of the contents of the accumulator minus the operand (A-M), ignoring the result (accumulator and memory remain untouched) but modifying the affected flags. Then we can use conditional branch
+          instructions that check the pertinent flag to branch to different sections in our program accordingly.</p>
 
-      <p>Example:</p>
+        <p>Example:</p>
+      </div>
 
       <div class="codeblock">
         <pre style="margin: 0;">
@@ -150,10 +153,12 @@
         </pre>
       </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Compare Instructions" class="button buttonNAVIGATION" onclick="cmdCOMPARE()">Compare Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Compare Instructions" class="button buttonNAVIGATION" onclick="cmdCOMPARE()">Compare Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
