--- a/src/html/cpx.html
+++ b/src/html/cpx.html
@@ -14,93 +14,96 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">CPX</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>CPX</h1>
         <h2 style="text-align:center;">ComPare memory and index X</h2>
         <h2 style="text-align:center;">Operation: Operation: Compare X and M</h2>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Immediate</td>
-          <td>CPX #$44</td>
-          <td>$E0</td>
-          <td>2</td>
-          <td>2</td>
-        </tr>
-        <tr>
-          <td>Zero Page</td>
-          <td>CPX $44</td>
-          <td>$E4</td>
-          <td>2</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>Absolute</td>
-          <td>CPX $4400</td>
-          <td>$EC</td>
-          <td>3</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&#10003;</td>
-                <td>&#10003;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Immediate</td>
+            <td>CPX #$44</td>
+            <td>$E0</td>
+            <td>2</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>Zero Page</td>
+            <td>CPX $44</td>
+            <td>$E4</td>
+            <td>2</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>Absolute</td>
+            <td>CPX $4400</td>
+            <td>$EC</td>
+            <td>3</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
+                  <td>&#10003;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p style="text-align:center;">The negative status flag is set if the result is negative, i.e. has it's most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.<br>The carry flag is set or cleared depending on the result.</p>
+      <div class="opcode-flags">
+        <p>The negative status flag is set if the result is negative, i.e. has it's most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.<br>The carry flag is set or cleared depending on the result.</p>
+      </div>
 
-      <p>Compares the contents of a memory address (the next byte of the instruction in Immediate addressing) with the index register X, updating the flags acordingly with the result (only N, Z and C are affected).</p>
+      <div class="opcode-text">
+        <p>Compares the contents of a memory address (the next byte of the instruction in Immediate addressing) with the index register X, updating the flags acordingly with the result (only N, Z and C are affected).</p>
 
-      <p>For the comparison, internally the X index register is substracted from the operand (X-M). Both register and what is inside the memory address remain untouched (the result is ignored) but the important here is that the appropiate flags are updated
-        reflecting the result of the comparison. Then conditional branching instructions may be used to branch to different points of our program depending of that result.</p>
+        <p>For the comparison, internally the X index register is substracted from the operand (X-M). Both register and what is inside the memory address remain untouched (the result is ignored) but the important here is that the appropiate flags are updated
+          reflecting the result of the comparison. Then conditional branching instructions may be used to branch to different points of our program depending of that result.</p>
 
-      <p>Example:</p>
+        <p>Example:</p>
+      </div>
 
       <div class="codeblock">
         <pre style="margin: 0;">
@@ -114,10 +117,12 @@
         </pre>
       </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Compare Instructions" class="button buttonNAVIGATION" onclick="cmdCOMPARE()">Compare Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Compare Instructions" class="button buttonNAVIGATION" onclick="cmdCOMPARE()">Compare Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
