--- a/src/html/eor.html
+++ b/src/html/eor.html
@@ -14,127 +14,130 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">EOR</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>EOR</h1>
         <h2 style="text-align:center;">Exclusive - OR memory with accumulator</h2>
         <h2 style="text-align:center;">Operation: A ^ M =&gt; A</h2>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Immediate</td>
-          <td>EOR #$44</td>
-          <td>$49</td>
-          <td>2</td>
-          <td>2</td>
-        </tr>
-        <tr>
-          <td>Zero Page</td>
-          <td>EOR $44</td>
-          <td>$45</td>
-          <td>2</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>Zero Page,X</td>
-          <td>EOR $44,X</td>
-          <td>$55</td>
-          <td>2</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <td>Absolute</td>
-          <td>EOR $4400</td>
-          <td>$4D</td>
-          <td>3</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <td>Absolute,X</td>
-          <td>EOR $4400,X</td>
-          <td>$5D</td>
-          <td>3</td>
-          <td>4+</td>
-        </tr>
-        <tr>
-          <td>Absolute,Y</td>
-          <td>EOR $4400,Y</td>
-          <td>$59</td>
-          <td>3</td>
-          <td>4+</td>
-        </tr>
-        <tr>
-          <td>(Indirect,X)</td>
-          <td>EOR ($44,X)</td>
-          <td>$41</td>
-          <td>2</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>(Indirect),Y</td>
-          <td>EOR ($44),Y</td>
-          <td>$51</td>
-          <td>2</td>
-          <td>5+</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Immediate</td>
+            <td>EOR #$44</td>
+            <td>$49</td>
+            <td>2</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>Zero Page</td>
+            <td>EOR $44</td>
+            <td>$45</td>
+            <td>2</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>Zero Page,X</td>
+            <td>EOR $44,X</td>
+            <td>$55</td>
+            <td>2</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Absolute</td>
+            <td>EOR $4400</td>
+            <td>$4D</td>
+            <td>3</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Absolute,X</td>
+            <td>EOR $4400,X</td>
+            <td>$5D</td>
+            <td>3</td>
+            <td>4+</td>
+          </tr>
+          <tr>
+            <td>Absolute,Y</td>
+            <td>EOR $4400,Y</td>
+            <td>$59</td>
+            <td>3</td>
+            <td>4+</td>
+          </tr>
+          <tr>
+            <td>(Indirect,X)</td>
+            <td>EOR ($44,X)</td>
+            <td>$41</td>
+            <td>2</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>(Indirect),Y</td>
+            <td>EOR ($44),Y</td>
+            <td>$51</td>
+            <td>2</td>
+            <td>5+</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p style="text-align:center;">+ add 1 cycle if page boundary crossed.<br>The negative flag is set if the result is negative, i.e. has its most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.</p>
+      <div class="opcode-flags">
+        <p>+ add 1 cycle if page boundary crossed.<br>The negative flag is set if the result is negative, i.e. has its most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.</p>
+      </div>
 
-      <p>Performs a "logic exclusive OR" operation between the bits of the accumulator and the operand in memory. The result of EOR will be 1 if both are 1 or 0 (0 EOR 0 = 1, 1 EOR 1 = 1), and will result in 0 in all the other cases.</p>
+      <div class="opcode-text">
+        <p>Performs a "logic exclusive OR" operation between the bits of the accumulator and the operand in memory. The result of EOR will be 1 if both are 1 or 0 (0 EOR 0 = 1, 1 EOR 1 = 1), and will result in 0 in all the other cases.</p>
 
-      <p>A very common use for EOR is to create switches that toggle between two states. Also another common and interesting use of this instruction is to invert numbers, effectively obtaining this way the one's complement.</p>
+        <p>A very common use for EOR is to create switches that toggle between two states. Also another common and interesting use of this instruction is to invert numbers, effectively obtaining this way the one's complement.</p>
 
-      <p>Example of a switch, using EOR:</p>
+        <p>Example of a switch, using EOR:</p>
+      </div>
 
       <div class="codeblock">
         <pre style="margin: 0;">
@@ -149,10 +152,12 @@
         </pre>
       </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Bitwise Instructions" class="button buttonNAVIGATION" onclick="cmdBITWISE()">Bitwise Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Bitwise Instructions" class="button buttonNAVIGATION" onclick="cmdBITWISE()">Bitwise Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
