--- a/src/html/inc.html
+++ b/src/html/inc.html
@@ -14,100 +14,105 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">INC</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>INC</h1>
         <h2 style="text-align:center;">INCrement memory by one</h2>
         <h2 style="text-align:center;">Operation: M + 1 =&gt; M</h2>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Zero Page</td>
-          <td>INC $44</td>
-          <td>$E6</td>
-          <td>2</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <td>Zero Page,X</td>
-          <td>INC $44,X</td>
-          <td>$F6</td>
-          <td>2</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>Absolute</td>
-          <td>INC $4400</td>
-          <td>$EE</td>
-          <td>3</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>Absolute,X</td>
-          <td>INC $4400</td>
-          <td>$FE</td>
-          <td>3</td>
-          <td>7</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Zero Page</td>
+            <td>INC $44</td>
+            <td>$E6</td>
+            <td>2</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <td>Zero Page,X</td>
+            <td>INC $44,X</td>
+            <td>$F6</td>
+            <td>2</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>Absolute</td>
+            <td>INC $4400</td>
+            <td>$EE</td>
+            <td>3</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>Absolute,X</td>
+            <td>INC $4400</td>
+            <td>$FE</td>
+            <td>3</td>
+            <td>7</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p style="text-align:center;">The negative status flag is set if the result is negative, i.e. has it's most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.</p>
+      <div class="opcode-flags">
+        <p>The negative status flag is set if the result is negative, i.e. has it's most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.</p>
+      </div>
 
-      <p>Increments the content of a memory address by one.</p>
+      <div class="opcode-text">
+        <p>Increments the content of a memory address by one.</p>
+      </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Memory Instructions" class="button buttonNAVIGATION" onclick="cmdMEMORY()">Memory Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Memory Instructions" class="button buttonNAVIGATION" onclick="cmdMEMORY()">Memory Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
