--- a/src/html/indexBKP.html
+++ b/src/html/indexBKP.html
@@ -3,9 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Instruction Set Reference for the 6510 Microprocessor</title>
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src vscode-resource: 'self' 'unsafe-inline'; font-src vscode-resource: ; img-src vscode-resource: ; style-src vscode-resource: 'self' 'unsafe-inline';" />
   <link href="${stylesc64opcodesUri}" type="text/css" rel="stylesheet">
   <script src="${scriptUri}"></script>
@@ -17,10 +16,10 @@
 <body>
   <div id="page-container">
     <div id="content-wrap">
-      <div id="header"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1>Welcome to C64 Opcodes<br>Extension for VSCode</h1>
+      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left">
+        <h1 style="text-align:center; padding-top: 40px;">Welcome to C64 Opcodes<br>Extension for VSCode</h1>
       </div>
-      <div id="sidebar">
+      <div class="HomeButtonBack" style="float: left;"><br>
         <button title="View List of All C64 Opcodes" class="button buttonMAIN" onclick="cmdVIEWALL()">View All Opcodes List</button><br>
         <button title="View List of All Processor Flags" class="button buttonMAIN" onclick="cmdPFLAGS()">Processor Flags</button><br>
         <button title="View List of All Bitwise Instructions" class="button buttonMAIN" onclick="cmdBITWISE()">Bitwise Instructions</button><br>
@@ -35,15 +34,12 @@
         <button title="View List of All Other Instructions" class="button buttonMAIN" onclick="cmdOTHER()">Other Instructions</button><br>
         <button title="View List of All Illegal Instructions" class="button buttonMAIN" onclick="cmdILLEGAL()">Illegal Instructions</button><br>
         <button title="Open Test Page" class="button buttonMAIN" onclick="cmdTEST()">Open Test Page</button><br>
-      </div>
-      <div id="home-body">
-        <h1>TEST TEXT</h1s>
-      </div>
-      <!-- all other page content -->
-      <div>
-        <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
+        <div style="background-color: blueviolet; float: right;">
+          <p>Test</p>
+        </div>
       </div>
     </div>
+    <footer id="footer">C64 Opcodes VSCode Extension, By WillASM</footer>
   </div>
 </body>
 
