--- a/src/html/jmp.html
+++ b/src/html/jmp.html
@@ -14,86 +14,89 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">JMP</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>JMP</h1>
         <h2 style="text-align:center;">JuMP to new location</h2>
         <h2 style="text-align:center;">Operation: (PC+1) =&gt; PCL, (PC+2) =&gt; PCH</h2>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Absolute</td>
-          <td>JMP $5597</td>
-          <td>$4C</td>
-          <td>3</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>Indirect</td>
-          <td>JMP ($5597)</td>
-          <td>$CC</td>
-          <td>3</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Absolute</td>
+            <td>JMP $5597</td>
+            <td>$4C</td>
+            <td>3</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>Indirect</td>
+            <td>JMP ($5597)</td>
+            <td>$CC</td>
+            <td>3</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p>The Program Counter (PC) is loaded with the address specified by the operand It is the only branch instruction that can use indirect addressing. In this mode the position indicated by the operand in the instruction contains the address to be effectively
-        jumped to. In the operative system of the C64 (called the Kernal) this addressing mode is used so the user can change vectors in RAM to call the system routines. Also this is exploited to patch certain routines into our customized ones easily.
-        You could use this for example to add new basic commands, like Simon's Basic did.</p>
+      <div class="opcode-text">
+        <p>The Program Counter (PC) is loaded with the address specified by the operand It is the only branch instruction that can use indirect addressing. In this mode the position indicated by the operand in the instruction contains the address to be effectively
+          jumped to. In the operative system of the C64 (called the Kernal) this addressing mode is used so the user can change vectors in RAM to call the system routines. Also this is exploited to patch certain routines into our customized ones easily.
+          You could use this for example to add new basic commands, like Simon's Basic did.</p>
+      </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Jump Instructions" class="button buttonNAVIGATION" onclick="cmdJUMP()">Jump Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Jump Instructions" class="button buttonNAVIGATION" onclick="cmdJUMP()">Jump Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
