--- a/src/html/jsr.html
+++ b/src/html/jsr.html
@@ -14,83 +14,86 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">JSR</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>JSR</h1>
         <h2 style="text-align:center;">Jump to SubRoutine saving return address</h2>
         <h4 style="text-align:center;">Operation: (PC+2) to stack, (PC+1) =&gt; PCH, (PC+2) =&gt; PC</h4>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Absolute</td>
-          <td>JSR $5597</td>
-          <td>$20</td>
-          <td>3</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Absolute</td>
+            <td>JSR $5597</td>
+            <td>$20</td>
+            <td>3</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p>This instruction allows the design of subroutines. It's very similar to how GOSUB statement works in BASIC.</p>
+      <div class="opcode-text">
+        <p>This instruction allows the design of subroutines. It's very similar to how GOSUB statement works in BASIC.</p>
 
-      <p>The address of the last byte following the operand will be the return address-1, this address is pushed into the stack, then the jump to the subroutine is executed. Execution continues until an RTS instruction is found, and then the previously saved
-        return address is pulled from the stack, added 1 and put into the PC register resuming execution from the next instruction following the JSR that called the subroutine code.</p>
+        <p>The address of the last byte following the operand will be the return address-1, this address is pushed into the stack, then the jump to the subroutine is executed. Execution continues until an RTS instruction is found, and then the previously
+          saved return address is pulled from the stack, added 1 and put into the PC register resuming execution from the next instruction following the JSR that called the subroutine code.</p>
 
-      <p>Subroutines are very important in machine code programming. They allow the use of repetitive sections of code written only one time in our program. They're also invaluable to make our programs more structured. However JSR should be avoided if a
-        subroutine need to be optimized for speed since the -undivisible- JSR/RTS pair is expensive in terms of clock cycles.</p>
+        <p>Subroutines are very important in machine code programming. They allow the use of repetitive sections of code written only one time in our program. They're also invaluable to make our programs more structured. However JSR should be avoided if
+          a subroutine need to be optimized for speed since the -undivisible- JSR/RTS pair is expensive in terms of clock cycles.</p>
+      </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Jump Instructions" class="button buttonNAVIGATION" onclick="cmdJUMP()">Jump Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Jump Instructions" class="button buttonNAVIGATION" onclick="cmdJUMP()">Jump Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
