--- a/src/html/ldy.html
+++ b/src/html/ldy.html
@@ -14,109 +14,113 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">LDY</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>LDY</h1>
         <h2 style="text-align:center;">LoaD index Y with memory</h2>
         <h2 style="text-align:center;">Operation: M =&gt; Y</h2>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Immediate</td>
-          <td>LDY #$44</td>
-          <td>$A0</td>
-          <td>2</td>
-          <td>2</td>
-        </tr>
-        <tr>
-          <td>Zero Page</td>
-          <td>LDY $44</td>
-          <td>$A4</td>
-          <td>2</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>Zero Page,X</td>
-          <td>LDY $44,X</td>
-          <td>$B4</td>
-          <td>2</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <td>Absolute</td>
-          <td>LDY $4400</td>
-          <td>$AC</td>
-          <td>3</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <td>Absolute,X</td>
-          <td>LDY $4400,X</td>
-          <td>$BC</td>
-          <td>3</td>
-          <td>4+</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Immediate</td>
+            <td>LDY #$44</td>
+            <td>$A0</td>
+            <td>2</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>Zero Page</td>
+            <td>LDY $44</td>
+            <td>$A4</td>
+            <td>2</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>Zero Page,X</td>
+            <td>LDY $44,X</td>
+            <td>$B4</td>
+            <td>2</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Absolute</td>
+            <td>LDY $4400</td>
+            <td>$AC</td>
+            <td>3</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Absolute,X</td>
+            <td>LDY $4400,X</td>
+            <td>$BC</td>
+            <td>3</td>
+            <td>4+</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p style="text-align:center;">+ add 1 cycle if page boundary crossed.<br>The negative flag is set if the result is negative, i.e. has it's most significant bit set (not in decimal mode).<br>The zero flag is set if the result is zero, or cleared if it is non-zero (not in decimal
-        mode).
-      </p>
+      <div class="opcode-flags">
+        <p>+ add 1 cycle if page boundary crossed.<br>The negative flag is set if the result is negative, i.e. has it's most significant bit set (not in decimal mode).<br>The zero flag is set if the result is zero, or cleared if it is non-zero (not in decimal
+          mode).</p>
+      </div>
 
-      <p>Retrieves a copy from the specified RAM or I/O address, and stores it in the Y index register. The content of the memory location is not affected by the operation.</p>
+      <div class="opcode-text">
+        <p>Retrieves a copy from the specified RAM or I/O address, and stores it in the Y index register. The content of the memory location is not affected by the operation.</p>
+      </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Memory Instructions" class="button buttonNAVIGATION" onclick="cmdMEMORY()">Memory Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Memory Instructions" class="button buttonNAVIGATION" onclick="cmdMEMORY()">Memory Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
