--- a/src/html/lsr.html
+++ b/src/html/lsr.html
@@ -14,114 +14,119 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">LSR</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>LSR</h1>
         <h2 style="text-align:center;">Shift right one bit, memory or accumulator</h2>
         <h2 style="text-align:center;">Operation: 0 =&gt; <span style="background-color: #867BE4;">7 6 5 4 3 2 1 0</span> =&gt; C</h2>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Accumulator</td>
-          <td>LSR</td>
-          <td>$4A</td>
-          <td>1</td>
-          <td>2</td>
-        </tr>
-        <tr>
-          <td>Zero Page</td>
-          <td>LSR $44</td>
-          <td>$46</td>
-          <td>2</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <td>Zero Page,X</td>
-          <td>LSR $44,X</td>
-          <td>$56</td>
-          <td>2</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>Absolute</td>
-          <td>LSR $4400</td>
-          <td>$4E</td>
-          <td>3</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>Absolute,X</td>
-          <td>LSR $4400,X</td>
-          <td>$5E</td>
-          <td>3</td>
-          <td>7</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&#10003;</td>
-                <td>&#10003;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Accumulator</td>
+            <td>LSR</td>
+            <td>$4A</td>
+            <td>1</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>Zero Page</td>
+            <td>LSR $44</td>
+            <td>$46</td>
+            <td>2</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <td>Zero Page,X</td>
+            <td>LSR $44,X</td>
+            <td>$56</td>
+            <td>2</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>Absolute</td>
+            <td>LSR $4400</td>
+            <td>$4E</td>
+            <td>3</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>Absolute,X</td>
+            <td>LSR $4400,X</td>
+            <td>$5E</td>
+            <td>3</td>
+            <td>7</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
+                  <td>&#10003;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p style="text-align:center;">The negative status flag is always unconditionally cleared.<br>The zero flag is cleared unless the operand is zero.<br>The carry flag is copied from the least significant bit (bit 0) of the operand prior to shifting.</p>
+      <div class="opcode-flags">
+        <P>The negative status flag is always unconditionally cleared.<br>The zero flag is cleared unless the operand is zero.<br>The carry flag is copied from the least significant bit (bit 0) of the operand prior to shifting.</p>
+      </div>
 
-      <p>Displaces the bits of the accumulator or a memory address specified by the operand, one position to the right. The rightmost bit goes to the Carry flag (C). From the left side, zeros are entering and N flag that controls the Negative bit flag (bit
-        7) will be always at zero when we make a lsr.</p>
+      <div class="opcode-text">
+        <p>Displaces the bits of the accumulator or a memory address specified by the operand, one position to the right. The rightmost bit goes to the Carry flag (C). From the left side, zeros are entering and N flag that controls the Negative bit flag
+          (bit 7) will be always at zero when we make a lsr.</p>
 
-      <p>It's the inverse operation of the instruction ASL.</p>
+        <p>It's the inverse operation of the instruction ASL.</p>
 
-      <p>Making an LSR, is equivalent to performing a division by 2. This detail is exploited to perform quick divisions, always that the divisor is a power of 2.</p>
+        <p>Making an LSR, is equivalent to performing a division by 2. This detail is exploited to perform quick divisions, always that the divisor is a power of 2.</p>
 
-      <p>It's remarkable to note here that the 6502 (and 6510) does not have any instruction to perform divisions.</p>
+        <p>It's remarkable to note here that the 6502 (and 6510) does not have any instruction to perform divisions.</p>
+      </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Bitwise Instructions" class="button buttonNAVIGATION" onclick="cmdBITWISE()">Bitwise Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Bitwise Instructions" class="button buttonNAVIGATION" onclick="cmdBITWISE()">Bitwise Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
