--- a/src/html/ora.html
+++ b/src/html/ora.html
@@ -14,127 +14,130 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">ORA</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>ORA</h1>
         <h2 style="text-align:center;">"OR" memory with accumulator</h2>
         <h2 style="text-align:center;">Operation: A | M =&gt; A</h2>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Immediate</td>
-          <td>ORA #$44</td>
-          <td>$09</td>
-          <td>2</td>
-          <td>2</td>
-        </tr>
-        <tr>
-          <td>Zero Page</td>
-          <td>ORA $44</td>
-          <td>$05</td>
-          <td>2</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>Zero Page,X</td>
-          <td>ORA $44,X</td>
-          <td>$15</td>
-          <td>2</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <td>Absolute</td>
-          <td>ORA $4400</td>
-          <td>$0D</td>
-          <td>3</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <td>Absolute,X</td>
-          <td>ORA $4400,X</td>
-          <td>$1D</td>
-          <td>3</td>
-          <td>4+</td>
-        </tr>
-        <tr>
-          <td>Absolute,Y</td>
-          <td>ORA $4400,Y</td>
-          <td>$19</td>
-          <td>3</td>
-          <td>4+</td>
-        </tr>
-        <tr>
-          <td>(Indirect,X)</td>
-          <td>ORA ($44,X)</td>
-          <td>$01</td>
-          <td>2</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>(Indirect),Y</td>
-          <td>ORA ($44),Y</td>
-          <td>$11</td>
-          <td>2</td>
-          <td>5+</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&#10003;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Immediate</td>
+            <td>ORA #$44</td>
+            <td>$09</td>
+            <td>2</td>
+            <td>2</td>
+          </tr>
+          <tr>
+            <td>Zero Page</td>
+            <td>ORA $44</td>
+            <td>$05</td>
+            <td>2</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>Zero Page,X</td>
+            <td>ORA $44,X</td>
+            <td>$15</td>
+            <td>2</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Absolute</td>
+            <td>ORA $4400</td>
+            <td>$0D</td>
+            <td>3</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Absolute,X</td>
+            <td>ORA $4400,X</td>
+            <td>$1D</td>
+            <td>3</td>
+            <td>4+</td>
+          </tr>
+          <tr>
+            <td>Absolute,Y</td>
+            <td>ORA $4400,Y</td>
+            <td>$19</td>
+            <td>3</td>
+            <td>4+</td>
+          </tr>
+          <tr>
+            <td>(Indirect,X)</td>
+            <td>ORA ($44,X)</td>
+            <td>$01</td>
+            <td>2</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>(Indirect),Y</td>
+            <td>ORA ($44),Y</td>
+            <td>$11</td>
+            <td>2</td>
+            <td>5+</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&#10003;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p style="text-align:center;">+ add 1 cycle if page boundary crossed.<br>The negative flag is set if the result is negative, i.e. has it's most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.</p>
+      <div class="opcode-flags">
+        <p>+ add 1 cycle if page boundary crossed.<br>The negative flag is set if the result is negative, i.e. has it's most significant bit set.<br>The zero flag is set if the result is zero, or cleared if it is non-zero.</p>
+      </div>
 
-      <p>Performs a "logic OR" between accumulator and operand in memory. The result of the operation will be 1 if any of the checked bits contains a 1, so the result will only be zero is both bits are zero.</p>
+      <div class="opcode-text">
+        <p>Performs a "logic OR" between accumulator and operand in memory. The result of the operation will be 1 if any of the checked bits contains a 1, so the result will only be zero is both bits are zero.</p>
 
-      <p>A very common usage for this instruction is to activate certain bits given a pattern (called mask). To deactivate (put bits to zero) we should use the instruction and with a proper mask, that is inserting zeros in the positions we need to deactivate.</p>
+        <p>A very common usage for this instruction is to activate certain bits given a pattern (called mask). To deactivate (put bits to zero) we should use the instruction and with a proper mask, that is inserting zeros in the positions we need to deactivate.</p>
 
-      <p>Example: Activate bit 5 (and only this bit) in the variable "value".</p>
+        <p>Example: Activate bit 5 (and only this bit) in the variable "value".</p>
+      </div>
 
       <div class="codeblock">
         <pre style="margin: 0;">
@@ -144,14 +147,18 @@
         </pre>
       </div>
 
-      <p>In this example, let's put that value = %11010010 (would have bit 5 = 0)</p>
+      <div class="opcode-text">
+        <p>In this example, let's put that value = %11010010 (would have bit 5 = 0)</p>
 
-      <p>When executing ORA, and saving it in value, the result will be %11110010. There would only be changed the bit position where we had put a one (in the fifth position).</p>
+        <p>When executing ORA, and saving it in value, the result will be %11110010. There would only be changed the bit position where we had put a one (in the fifth position).</p>
+      </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Bitwise Instructions" class="button buttonNAVIGATION" onclick="cmdBITWISE()">Bitwise Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Bitwise Instructions" class="button buttonNAVIGATION" onclick="cmdBITWISE()">Bitwise Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
