--- a/src/html/pflags.html
+++ b/src/html/pflags.html
@@ -14,12 +14,9 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
         <h1 style="text-align:center; padding-top: 40px;">Processor Flags<br>Placeholder</h1>
       </div>
       <div class="AllButtonBack"><br>
