--- a/src/html/sta.html
+++ b/src/html/sta.html
@@ -14,119 +14,122 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">STA</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>STA</h1>
         <h2 style="text-align:center;">STore Accumulator in memory</h2>
         <h2 style="text-align:center;">Operation: A =&gt; M</h2>
       </div>
       <br><br>
 
-      <table class='modes'>
-        <tr>
-          <th>
-            Mode
-          </th>
-          <th>
-            Syntax
-          </th>
-          <th>
-            HEX
-          </th>
-          <th>
-            LEN
-          </th>
-          <th>
-            TIME
-          </th>
-        </tr>
-        <tr>
-          <td>Zero Page</td>
-          <td>STA $44</td>
-          <td>$85</td>
-          <td>2</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>Zero Page,X</td>
-          <td>STA $44,X</td>
-          <td>$95</td>
-          <td>2</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <td>Absolute</td>
-          <td>STA $4400</td>
-          <td>$8D</td>
-          <td>3</td>
-          <td>4</td>
-        </tr>
-        <tr>
-          <td>Absolute,X</td>
-          <td>STA $4400,X</td>
-          <td>$9D</td>
-          <td>3</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <td>Absolute,Y</td>
-          <td>STA $4400,Y</td>
-          <td>$99</td>
-          <td>3</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <td>(Indirect,X)</td>
-          <td>STA ($44,X)</td>
-          <td>$81</td>
-          <td>2</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>(Indirect),Y</td>
-          <td>STA ($44),Y</td>
-          <td>$91</td>
-          <td>2</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <th colspan=5>
-            <table class='modes flags'>
-              <tr>
-                <td>N</td>
-                <td>V</td>
-                <td>&#151;</td>
-                <td>B</td>
-                <td>D</td>
-                <td>I</td>
-                <td>Z</td>
-                <td>C</td>
-              </tr>
-              <tr style="color: olivedrab;">
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-                <td>&nbsp;</td>
-              </tr>
-            </table>
-          </th>
-        </tr>
-      </table>
+      <div class="opcode-table">
+        <table class='modes'>
+          <tr>
+            <th>
+              Mode
+            </th>
+            <th>
+              Syntax
+            </th>
+            <th>
+              HEX
+            </th>
+            <th>
+              LEN
+            </th>
+            <th>
+              TIME
+            </th>
+          </tr>
+          <tr>
+            <td>Zero Page</td>
+            <td>STA $44</td>
+            <td>$85</td>
+            <td>2</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>Zero Page,X</td>
+            <td>STA $44,X</td>
+            <td>$95</td>
+            <td>2</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Absolute</td>
+            <td>STA $4400</td>
+            <td>$8D</td>
+            <td>3</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>Absolute,X</td>
+            <td>STA $4400,X</td>
+            <td>$9D</td>
+            <td>3</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <td>Absolute,Y</td>
+            <td>STA $4400,Y</td>
+            <td>$99</td>
+            <td>3</td>
+            <td>5</td>
+          </tr>
+          <tr>
+            <td>(Indirect,X)</td>
+            <td>STA ($44,X)</td>
+            <td>$81</td>
+            <td>2</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <td>(Indirect),Y</td>
+            <td>STA ($44),Y</td>
+            <td>$91</td>
+            <td>2</td>
+            <td>6</td>
+          </tr>
+          <tr>
+            <th colspan=5>
+              <table class='modes flags'>
+                <tr>
+                  <td>N</td>
+                  <td>V</td>
+                  <td>&#151;</td>
+                  <td>B</td>
+                  <td>D</td>
+                  <td>I</td>
+                  <td>Z</td>
+                  <td>C</td>
+                </tr>
+                <tr style="color: olivedrab;">
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                  <td>&nbsp;</td>
+                </tr>
+              </table>
+            </th>
+          </tr>
+        </table>
+      </div>
 
-      <p>Stores the contents of the accumulator in the address specified by the operand.</p>
+      <div class="opcode-text">
+        <p>Stores the contents of the accumulator in the address specified by the operand.</p>
+      </div>
 
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
-      <button style="margin-left: 15px;" title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
-      <button style="margin-left: 15px;" title="View List of All Memory Instructions" class="button buttonNAVIGATION" onclick="cmdMEMORY()">Memory Instructions</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonNAVIGATION" onclick="cmdHOME()">Home</button>
+        <button title="View List of All C64 Opcodes" class="button buttonNAVIGATION" onclick="cmdVIEWALL()">View All Opcodes List</button>
+        <button title="View List of All Memory Instructions" class="button buttonNAVIGATION" onclick="cmdMEMORY()">Memory Instructions</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
