--- a/src/html/test.html
+++ b/src/html/test.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src vscode-resource: 'self' 'unsafe-inline'; font-src vscode-resource: ; img-src vscode-resource: ; style-src vscode-resource: 'self' 'unsafe-inline';" />
-  <link href="${stylesc64opcodesTESTUri}" type="text/css" rel="stylesheet">
+  <link href="${stylesc64opcodesUri}" type="text/css" rel="stylesheet">
   <script src="${scriptUri}"></script>
   <style>
     /*C64FONT*/
@@ -18,7 +18,7 @@
   <div id="page-container">
     <div id="content-wrap">
       <div id="header"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
-        <h1 style="text-align:center; padding-top: 20px;">TEST HEADER TEXT</h1>
+        <h1>TEST HEADER TEXT</h1>
       </div>
       <div id="sidebar">
         test test Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore labore suscipit qui cupiditate a voluptatem dicta modi aliquid repellendus, esse tempore quo fugiat repudiandae ducimus, pariatur eius odio, nihil ullam. Lorem ipsum dolor sit
