--- a/src/html/viewall.html
+++ b/src/html/viewall.html
@@ -14,13 +14,10 @@
 </head>
 
 <body>
-  <!--
-  <script nonce="${nonce}" src="${scriptUri}"></script>
-	-->
   <div id="page-container">
     <div id="content-wrap">
-      <div class="TitleBlock"> <img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" align="left" class="center">
-        <h1 style="text-align:center; padding-top: 20px;">View All Opcodes<br>Select Opcode From the List</h1>
+      <div id="header"><img src="${imgc64screenUri}" alt="c64 logo" width="264" height="180" id="header-image">
+        <h1>View All Opcodes<br>Select Opcode From the List</h1>
       </div>
       <div class="AllButtonBack"><br>
         <button title="Add Memory to Accumulator with Carry" class="button buttonOPCODE" onclick="cmdADC()">ADC</button>
@@ -84,8 +81,10 @@
       <div id="body">
         <p>View all</p>
       </div>
-      <h2 style="margin-left: 15px;">Navigation:</h2>
-      <button style="margin-left: 15px;" title="Return to Home Page" class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
+      <div id="navigation">
+        <h2>Navigation:</h2>
+        <button title="Return to Home Page" class="button buttonOPCODE" onclick="cmdHOME()">Home</button>
+      </div>
     </div>
     <footer id="footer">C64 Opcodes Extension, By WillASM</footer>
   </div>
